# fractal_farm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  migrate_db.sh  readme.md
.github/workflows/: rust.yml
migrations/2018-02-04-164516_create_fractals/: down.sql  up.sql
migrations/2018-02-04-204717_add_duel/: up.sql
migrations/2018-02-04-215515_extend_duel/: up.sql
migrations/2018-02-05-183321_elo/: up.sql
migrations/2018-02-05-185617_consume/: up.sql
migrations/2018-02-08-175830_rank/: down.sql  up.sql
migrations/2018-02-10-155931_create_indices/: down.sql  up.sql
migrations/2018-02-20-161827_deleted/: up.sql
migrations/2018-02-20-162623_consumed_time/: down.sql  up.sql
migrations/2018-03-04-201249_multiple_variations/: repair_json.py
migrations/2018-03-21-142455_color_is_option/: down.sql  repair_json.py  up.sql
src/: db.rs  db_convenience.rs  elo.rs  genetic.rs  main.rs  models.rs  rating.rs  schema.rs
static/: cover.css  jsoneditor.min.css  jsoneditor.min.js  style.css
templates/: base.html.tera  breed.html.tera  duel.html.tera  editor.html.tera  generate.html.tera  random.html.tera  top.html.tera  uploadJson.html.tera
