[package]
name = "fractal_farm"
version = "0.1.0"
authors = ["Hendrik Schawe <surt91@gmail.com>"]

[dependencies]
a_fractal_a_day = { version = "^0.1.1", git = "https://github.com/surt91/AFractalADay" }

rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = { version = "0.3.6", features = ["tera_templates"] }

diesel = { version = "1.0", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
dotenv = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

rand = "*"
time = "*"
sha2 = "0.7.0"
