[package]
name = "fractal_farm"
version = "0.1.0"
authors = ["Hendrik Schawe <surt91@gmail.com>"]

[dependencies]
a_fractal_a_day = { version = "^0.1.2", git = "https://github.com/surt91/AFractalADay" }

rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["tera_templates"] }

r2d2-diesel = "1.0"
r2d2 = "0.8"
diesel = { version = "1.3.3", features = ["sqlite"] }
dotenv = "0.13"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rand = "0.6"
time = "0.1.40"
sha2 = "0.7.0"
